Spacing issue fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -991,6 +991,10 @@ ul {
 .dashboard .profile-information .navigation li:hover a {
   color: #025069;
 }
+
+.dashboard .content {
+  margin-left: 4%;
+}
 /* ==========================================================================
    Card
    ========================================================================== */
